Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24637

Opening CMake project with custom parameters is confusing and error-prone

    XMLWordPrintable

Details

    Description

      The CMake project configuration dialog is confusing and error-prone:

      • It is unclear what to fill in in the Initial CMake parameters field and what below and why.
      • The Initial CMake parameters field is text-only while the one below is a table. This is inconsistent.
      • It is unclear that one is supposed to click "Build --> Run CMake" from the menu after filling out options in the initial CMake parameters field. I tried to click "Apply configuration changes" which is the only button there. But if the resolve fails, I am loosing all custom options in the table which is frustrating.
      • Even though I am using a kit without Qt, the Initial CMake parameters field contains Qt-related CMake parameters by default.

      All in all, the user experience is quite frustrating for somebody who has not carefully read https://www.qt.io/blog/cmake-project-configuration-in-qt-creator-4.13. The dialog should provide more guidance.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cadam Cristian Adam
            rweickelt Richard Weickelt
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes