CMakePM: Add "Re-configure with Initial Parameters" button

This makes it easier to configure a CMake project with initial cmake parameters
when parameters are added or if the configuration fails.

Task-number: QTCREATORBUG-24637
Change-Id: I880ac6ad82f7cc5e1df2e34e9bcc28e67c3d716e
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>